--- a/autotrade/web/templates/portfolio.html
+++ b/autotrade/web/templates/portfolio.html
@@ -1,1 +1,4 @@
-{% extends 'layout.html' %}{% block content %}<h1>Portfolio</h1>{% endblock %}
+{% extends 'layout.html' %}
+{% block content %}
+<h1 class="text-2xl font-bold mb-4">Portfolio</h1>
+{% endblock %}
