Implement backend integration endpoints

--- a/autotrade/web/templates/portfolio.html
+++ b/autotrade/web/templates/portfolio.html
@@ -1,1 +1,5 @@
-{% extends 'layout.html' %}{% block content %}<h1>Portfolio</h1>{% endblock %}
+{% extends "layout.html" %}
+{% block content %}
+<h1 class="title mb-4">Portfolio</h1>
+<p>Coming soon…</p>
+{% endblock %}
